# haskell-examples

./: .gitignore  LICENSE  haskell-examples.cabal
app/: Main.hs
labs/lr1/1_basic/: 2.lhs  3.lhs  4.lhs  5.lhs
labs/lr1/2_conditional/: 10.hs  12.hs  16.hs  4_6.hs  6.lhs  9.hs
labs/lr2/: 1.hs  3.hs  4.hs  5.hs  6.txt  9.hs
labs/lr3/2/: 4.hs  6.hs
labs/lr3/3/: 2.hs  5.hs
labs/lr3/4/: 2.hs
labs/lr4/1/: 10.hs  4.hs  9.hs
labs/lr4/3/: 4.hs  5.hs
labs/lr5/1/: Freq.hs
labs/lr5/2/: 4.hs
labs/lr5/3/: 11.hs  12.hs  3.hs  4.hs  6.hs  6.scala  7.hs
labs/lr6/: tasks.txt
labs/lr6/1/: 5.hs
labs/lr8/: tasks.txt
lr1/: 0.lhs
lr1/1_basic/: 1.lhs
lr1/2_conditional/: 1.lhs  11.hs  13.hs  15.hs  2.lhs  3.lhs  4_3.hs  5.lhs  7.lhs  8.hs
lr1/3_predicates/: 10.hs
lr2/: 2.hs  7.hs  8.hs
lr3/: tasks.txt
lr3/1/: 1.hs  2.hs
lr3/2/: 9.hs
lr3/3/: 5.hs
lr4/1/: 1.txt
lr4/2/: 3.hs
lr4/4/: 5.hs  7.hs
lr5/: tasks.txt
lr5/1/: Dupl.hs
lr5/2/: 3.hs
lr5/3/: 10.hs  11.hs  6.hs
lr7/: tasks.txt
src/: Examples.hs
test/: Spec.hs
