name:                haskell-examples
version:             0.0.1-SNAPSHOT
synopsis:            Project containing different excercises and their solutions
homepage:            https://github.com/oopscurity/haskell-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Artem Kravchenko
maintainer:          ktavchenkofirst@gmail.com
copyright:           2016 Artem Kravchenko
category:            Learning Haskell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Examples
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-examples-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-examples
  default-language:    Haskell2010

test-suite haskell-examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-examples
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Oopscurity/haskell-examples.git
